patch:mend components

--- a/Angular-Classwork/src/app/app.component.html
+++ b/Angular-Classwork/src/app/app.component.html
@@ -1,1 +1,3 @@
-<h1>This is my first time using Angular</h1>
+<h1>This is the root component</h1>
+<app-my-component></app-my-component>
+<catecomponent></catecomponent>
