--- a/Angular-Classwork/src/app/app.component.html
+++ b/Angular-Classwork/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1>This is the root component</h1>
+<!-- <h1>This is the root component</h1>
 <app-my-component></app-my-component>
-<catecomponent></catecomponent>
-<!-- <div class="bg-warning">
-
-</div> -->
+<catecomponent></catecomponent> -->
+<app-interpolation></app-interpolation>
