add property binding

--- a/Angular-Classwork/src/app/app.component.html
+++ b/Angular-Classwork/src/app/app.component.html
@@ -1,4 +1,6 @@
-<!-- <h1>This is the root component</h1>
-<app-my-component></app-my-component>
-<catecomponent></catecomponent> -->
-<app-interpolation></app-interpolation>
+<h1>This is the root component</h1>
+<!-- <app-my-component></app-my-component> -->
+<!-- <catecomponent></catecomponent> --> 
+<!-- <app-interpolation></app-interpolation> --> 
+
+<app-property-binding></app-property-binding>
