--- a/Angular-Classwork/src/app/app.component.html
+++ b/Angular-Classwork/src/app/app.component.html
@@ -1,6 +1,9 @@
-<h1>This is the root component</h1>
-<!-- <app-my-component></app-my-component> -->
-<!-- <catecomponent></catecomponent> --> 
-<!-- <app-interpolation></app-interpolation> --> 
+<div class="container">
+    <h1>This is the root component</h1>
+    <!-- <app-my-component></app-my-component> -->
+    <!-- <catecomponent></catecomponent> -->
+    <!-- <app-interpolation></app-interpolation> -->
 
-<app-property-binding></app-property-binding>
+    <!-- <app-property-binding></app-property-binding> -->
+    <app-event-binding></app-event-binding>
+</div>
