--- a/Angular-Classwork/src/app/event-binding/event-binding.component.html
+++ b/Angular-Classwork/src/app/event-binding/event-binding.component.html
@@ -1,6 +1,6 @@
 <!-- <p>event-binding works!</p> -->
 <p>The number of button clicks: {{clicks}}</p>
-<p> The Input text: {{someText}}</p>
+<p> The Input text: {{myText}}</p>
 
 <button class="btn btn-info" click="MyCoolButtonClicked()">CLick Me</button>
 <input (input)="showInput($event)">
